src/MuteParser.java
// Generated from Mute.g4 by ANTLR 4.1
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class MuteParser extends Parser {
	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__12=1, T__11=2, T__10=3, T__9=4, T__8=5, T__7=6, T__6=7, T__5=8, T__4=9, 
		T__3=10, T__2=11, T__1=12, T__0=13, COMMENT=14, STRING=15, MODULE=16, 
		ID=17, INT=18, COMP_OPERATOR=19, OPERATION_BEGIN=20, CONDITION_BEGIN=21, 
		ASSIGNMENT_BEGIN=22, IGNORED_EOL=23, EOL=24, WHITESPACE=25;
	public static final String[] tokenNames = {
		"<INVALID>", "']'", "'&'", "'.'", "')'", "','", "'+'", "'*'", "'-'", "':'", 
		"'/'", "'~'", "'}'", "'|'", "COMMENT", "STRING", "MODULE", "ID", "INT", 
		"COMP_OPERATOR", "'{'", "'('", "'['", "IGNORED_EOL", "EOL", "WHITESPACE"
	};
	public static final int
		RULE_parse = 0, RULE_statement = 1, RULE_statementPart = 2, RULE_operation = 3, 
		RULE_condition = 4, RULE_assignmentList = 5, RULE_assignment = 6, RULE_lValueExpression = 7, 
		RULE_rValueExpression = 8;
	public static final String[] ruleNames = {
		"parse", "statement", "statementPart", "operation", "condition", "assignmentList", 
		"assignment", "lValueExpression", "rValueExpression"
	};

	@Override
	public String getGrammarFileName() { return "Mute.g4"; }

	@Override
	public String[] getTokenNames() { return tokenNames; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public ATN getATN() { return _ATN; }

	public MuteParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}
	public static class ParseContext extends ParserRuleContext {
		public List<StatementContext> statement() {
			return getRuleContexts(StatementContext.class);
		}
		public TerminalNode EOF() { return getToken(MuteParser.EOF, 0); }
		public StatementContext statement(int i) {
			return getRuleContext(StatementContext.class,i);
		}
		public ParseContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_parse; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MuteListener ) ((MuteListener)listener).enterParse(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MuteListener ) ((MuteListener)listener).exitParse(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof MuteVisitor ) return ((MuteVisitor<? extends T>)visitor).visitParse(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ParseContext parse() throws RecognitionException {
		ParseContext _localctx = new ParseContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_parse);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(19); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(18); statement();
				}
				}
				setState(21); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( (((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << MODULE) | (1L << ID) | (1L << OPERATION_BEGIN) | (1L << CONDITION_BEGIN) | (1L << ASSIGNMENT_BEGIN))) != 0) );
			setState(23); match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class StatementContext extends ParserRuleContext {
		public TerminalNode MODULE() { return getToken(MuteParser.MODULE, 0); }
		public StatementPartContext statementPart(int i) {
			return getRuleContext(StatementPartContext.class,i);
		}
		public TerminalNode EOL() { return getToken(MuteParser.EOL, 0); }
		public TerminalNode ID() { return getToken(MuteParser.ID, 0); }
		public List<StatementPartContext> statementPart() {
			return getRuleContexts(StatementPartContext.class);
		}
		public StatementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_statement; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MuteListener ) ((MuteListener)listener).enterStatement(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MuteListener ) ((MuteListener)listener).exitStatement(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof MuteVisitor ) return ((MuteVisitor<? extends T>)visitor).visitStatement(this);
			else return visitor.visitChildren(this);
		}
	}

	public final StatementContext statement() throws RecognitionException {
		StatementContext _localctx = new StatementContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_statement);
		int _la;
		try {
			setState(43);
			switch (_input.LA(1)) {
			case MODULE:
				enterOuterAlt(_localctx, 1);
				{
				setState(25); match(MODULE);
				setState(27); 
				_errHandler.sync(this);
				_la = _input.LA(1);
				do {
					{
					{
					setState(26); statementPart();
					}
					}
					setState(29); 
					_errHandler.sync(this);
					_la = _input.LA(1);
				} while ( (((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << OPERATION_BEGIN) | (1L << CONDITION_BEGIN) | (1L << ASSIGNMENT_BEGIN))) != 0) );
				setState(31); match(EOL);
				}
				break;
			case ID:
			case OPERATION_BEGIN:
			case CONDITION_BEGIN:
			case ASSIGNMENT_BEGIN:
				enterOuterAlt(_localctx, 2);
				{
				setState(34);
				_la = _input.LA(1);
				if (_la==ID) {
					{
					setState(33); match(ID);
					}
				}

				setState(37); 
				_errHandler.sync(this);
				_la = _input.LA(1);
				do {
					{
					{
					setState(36); statementPart();
					}
					}
					setState(39); 
					_errHandler.sync(this);
					_la = _input.LA(1);
				} while ( (((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << OPERATION_BEGIN) | (1L << CONDITION_BEGIN) | (1L << ASSIGNMENT_BEGIN))) != 0) );
				setState(41); match(EOL);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class StatementPartContext extends ParserRuleContext {
		public StatementPartContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_statementPart; }
	 
		public StatementPartContext() { }
		public void copyFrom(StatementPartContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class ConditionStatementPartContext extends StatementPartContext {
		public ConditionContext condition() {
			return getRuleContext(ConditionContext.class,0);
		}
		public ConditionStatementPartContext(StatementPartContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MuteListener ) ((MuteListener)listener).enterConditionStatementPart(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MuteListener ) ((MuteListener)listener).exitConditionStatementPart(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof MuteVisitor ) return ((MuteVisitor<? extends T>)visitor).visitConditionStatementPart(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class AssignmentStatementPartContext extends StatementPartContext {
		public AssignmentListContext assignmentList() {
			return getRuleContext(AssignmentListContext.class,0);
		}
		public AssignmentStatementPartContext(StatementPartContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MuteListener ) ((MuteListener)listener).enterAssignmentStatementPart(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MuteListener ) ((MuteListener)listener).exitAssignmentStatementPart(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof MuteVisitor ) return ((MuteVisitor<? extends T>)visitor).visitAssignmentStatementPart(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class OperationStatementPartContext extends StatementPartContext {
		public OperationContext operation() {
			return getRuleContext(OperationContext.class,0);
		}
		public OperationStatementPartContext(StatementPartContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MuteListener ) ((MuteListener)listener).enterOperationStatementPart(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MuteListener ) ((MuteListener)listener).exitOperationStatementPart(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof MuteVisitor ) return ((MuteVisitor<? extends T>)visitor).visitOperationStatementPart(this);
			else return visitor.visitChildren(this);
		}
	}

	public final StatementPartContext statementPart() throws RecognitionException {
		StatementPartContext _localctx = new StatementPartContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_statementPart);
		try {
			setState(48);
			switch (_input.LA(1)) {
			case ASSIGNMENT_BEGIN:
				_localctx = new AssignmentStatementPartContext(_localctx);
				enterOuterAlt(_localctx, 1);
				{
				setState(45); assignmentList();
				}
				break;
			case OPERATION_BEGIN:
				_localctx = new OperationStatementPartContext(_localctx);
				enterOuterAlt(_localctx, 2);
				{
				setState(46); operation();
				}
				break;
			case CONDITION_BEGIN:
				_localctx = new ConditionStatementPartContext(_localctx);
				enterOuterAlt(_localctx, 3);
				{
				setState(47); condition();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class OperationContext extends ParserRuleContext {
		public OperationContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_operation; }
	 
		public OperationContext() { }
		public void copyFrom(OperationContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class AssignmentOperationContext extends OperationContext {
		public TerminalNode OPERATION_BEGIN() { return getToken(MuteParser.OPERATION_BEGIN, 0); }
		public AssignmentListContext assignmentList() {
			return getRuleContext(AssignmentListContext.class,0);
		}
		public LValueExpressionContext lValueExpression() {
			return getRuleContext(LValueExpressionContext.class,0);
		}
		public AssignmentOperationContext(OperationContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MuteListener ) ((MuteListener)listener).enterAssignmentOperation(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MuteListener ) ((MuteListener)listener).exitAssignmentOperation(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof MuteVisitor ) return ((MuteVisitor<? extends T>)visitor).visitAssignmentOperation(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class GenericOperationContext extends OperationContext {
		public TerminalNode OPERATION_BEGIN() { return getToken(MuteParser.OPERATION_BEGIN, 0); }
		public RValueExpressionContext rValueExpression() {
			return getRuleContext(RValueExpressionContext.class,0);
		}
		public GenericOperationContext(OperationContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MuteListener ) ((MuteListener)listener).enterGenericOperation(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MuteListener ) ((MuteListener)listener).exitGenericOperation(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof MuteVisitor ) return ((MuteVisitor<? extends T>)visitor).visitGenericOperation(this);
			else return visitor.visitChildren(this);
		}
	}

	public final OperationContext operation() throws RecognitionException {
		OperationContext _localctx = new OperationContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_operation);
		try {
			setState(59);
			switch ( getInterpreter().adaptivePredict(_input,6,_ctx) ) {
			case 1:
				_localctx = new AssignmentOperationContext(_localctx);
				enterOuterAlt(_localctx, 1);
				{
				setState(50); match(OPERATION_BEGIN);
				setState(51); lValueExpression(0);
				setState(52); assignmentList();
				setState(53); match(12);
				}
				break;

			case 2:
				_localctx = new GenericOperationContext(_localctx);
				enterOuterAlt(_localctx, 2);
				{
				setState(55); match(OPERATION_BEGIN);
				setState(56); rValueExpression(0);
				setState(57); match(12);
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ConditionContext extends ParserRuleContext {
		public ConditionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_condition; }
	 
		public ConditionContext() { }
		public void copyFrom(ConditionContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class ExistenceConditionContext extends ConditionContext {
		public LValueExpressionContext lValueExpression() {
			return getRuleContext(LValueExpressionContext.class,0);
		}
		public TerminalNode CONDITION_BEGIN() { return getToken(MuteParser.CONDITION_BEGIN, 0); }
		public ExistenceConditionContext(ConditionContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MuteListener ) ((MuteListener)listener).enterExistenceCondition(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MuteListener ) ((MuteListener)listener).exitExistenceCondition(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof MuteVisitor ) return ((MuteVisitor<? extends T>)visitor).visitExistenceCondition(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class GenericConditionContext extends ConditionContext {
		public TerminalNode COMP_OPERATOR() { return getToken(MuteParser.COMP_OPERATOR, 0); }
		public RValueExpressionContext rValueExpression(int i) {
			return getRuleContext(RValueExpressionContext.class,i);
		}
		public TerminalNode CONDITION_BEGIN() { return getToken(MuteParser.CONDITION_BEGIN, 0); }
		public List<RValueExpressionContext> rValueExpression() {
			return getRuleContexts(RValueExpressionContext.class);
		}
		public GenericConditionContext(ConditionContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MuteListener ) ((MuteListener)listener).enterGenericCondition(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MuteListener ) ((MuteListener)listener).exitGenericCondition(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof MuteVisitor ) return ((MuteVisitor<? extends T>)visitor).visitGenericCondition(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ConditionContext condition() throws RecognitionException {
		ConditionContext _localctx = new ConditionContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_condition);
		try {
			setState(71);
			switch ( getInterpreter().adaptivePredict(_input,7,_ctx) ) {
			case 1:
				_localctx = new GenericConditionContext(_localctx);
				enterOuterAlt(_localctx, 1);
				{
				setState(61); match(CONDITION_BEGIN);
				setState(62); rValueExpression(0);
				setState(63); match(COMP_OPERATOR);
				setState(64); rValueExpression(0);
				setState(65); match(4);
				}
				break;

			case 2:
				_localctx = new ExistenceConditionContext(_localctx);
				enterOuterAlt(_localctx, 2);
				{
				setState(67); match(CONDITION_BEGIN);
				setState(68); lValueExpression(0);
				setState(69); match(4);
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class AssignmentListContext extends ParserRuleContext {
		public AssignmentContext assignment(int i) {
			return getRuleContext(AssignmentContext.class,i);
		}
		public List<AssignmentContext> assignment() {
			return getRuleContexts(AssignmentContext.class);
		}
		public TerminalNode ASSIGNMENT_BEGIN() { return getToken(MuteParser.ASSIGNMENT_BEGIN, 0); }
		public AssignmentListContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_assignmentList; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MuteListener ) ((MuteListener)listener).enterAssignmentList(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MuteListener ) ((MuteListener)listener).exitAssignmentList(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof MuteVisitor ) return ((MuteVisitor<? extends T>)visitor).visitAssignmentList(this);
			else return visitor.visitChildren(this);
		}
	}

	public final AssignmentListContext assignmentList() throws RecognitionException {
		AssignmentListContext _localctx = new AssignmentListContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_assignmentList);
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(73); match(ASSIGNMENT_BEGIN);
			setState(74); assignment();
			setState(79);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,8,_ctx);
			while ( _alt!=1 && _alt!=-1 ) {
				if ( _alt==1+1 ) {
					{
					{
					setState(75); match(5);
					setState(76); assignment();
					}
					} 
				}
				setState(81);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,8,_ctx);
			}
			setState(82); match(1);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class AssignmentContext extends ParserRuleContext {
		public TerminalNode INT() { return getToken(MuteParser.INT, 0); }
		public TerminalNode ID() { return getToken(MuteParser.ID, 0); }
		public RValueExpressionContext rValueExpression() {
			return getRuleContext(RValueExpressionContext.class,0);
		}
		public AssignmentContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_assignment; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MuteListener ) ((MuteListener)listener).enterAssignment(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MuteListener ) ((MuteListener)listener).exitAssignment(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof MuteVisitor ) return ((MuteVisitor<? extends T>)visitor).visitAssignment(this);
			else return visitor.visitChildren(this);
		}
	}

	public final AssignmentContext assignment() throws RecognitionException {
		AssignmentContext _localctx = new AssignmentContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_assignment);
		int _la;
		try {
			setState(88);
			switch ( getInterpreter().adaptivePredict(_input,9,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(84);
				_la = _input.LA(1);
				if ( !(_la==ID || _la==INT) ) {
				_errHandler.recoverInline(this);
				}
				consume();
				setState(85); match(9);
				setState(86); rValueExpression(0);
				}
				break;

			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(87); rValueExpression(0);
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class LValueExpressionContext extends ParserRuleContext {
		public int _p;
		public TerminalNode INT() { return getToken(MuteParser.INT, 0); }
		public TerminalNode ID() { return getToken(MuteParser.ID, 0); }
		public LValueExpressionContext lValueExpression() {
			return getRuleContext(LValueExpressionContext.class,0);
		}
		public LValueExpressionContext(ParserRuleContext parent, int invokingState) { super(parent, invokingState); }
		public LValueExpressionContext(ParserRuleContext parent, int invokingState, int _p) {
			super(parent, invokingState);
			this._p = _p;
		}
		@Override public int getRuleIndex() { return RULE_lValueExpression; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MuteListener ) ((MuteListener)listener).enterLValueExpression(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MuteListener ) ((MuteListener)listener).exitLValueExpression(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof MuteVisitor ) return ((MuteVisitor<? extends T>)visitor).visitLValueExpression(this);
			else return visitor.visitChildren(this);
		}
	}

	public final LValueExpressionContext lValueExpression(int _p) throws RecognitionException {
		ParserRuleContext _parentctx = _ctx;
		int _parentState = getState();
		LValueExpressionContext _localctx = new LValueExpressionContext(_ctx, _parentState, _p);
		LValueExpressionContext _prevctx = _localctx;
		int _startState = 14;
		enterRecursionRule(_localctx, RULE_lValueExpression);
		int _la;
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			{
			setState(91); match(ID);
			}
			_ctx.stop = _input.LT(-1);
			setState(98);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,10,_ctx);
			while ( _alt!=2 && _alt!=-1 ) {
				if ( _alt==1 ) {
					if ( _parseListeners!=null ) triggerExitRuleEvent();
					_prevctx = _localctx;
					{
					{
					_localctx = new LValueExpressionContext(_parentctx, _parentState, _p);
					pushNewRecursionContext(_localctx, _startState, RULE_lValueExpression);
					setState(93);
					if (!(2 >= _localctx._p)) throw new FailedPredicateException(this, "2 >= $_p");
					setState(94); match(3);
					setState(95);
					_la = _input.LA(1);
					if ( !(_la==ID || _la==INT) ) {
					_errHandler.recoverInline(this);
					}
					consume();
					}
					} 
				}
				setState(100);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,10,_ctx);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			unrollRecursionContexts(_parentctx);
		}
		return _localctx;
	}

	public static class RValueExpressionContext extends ParserRuleContext {
		public int _p;
		public RValueExpressionContext(ParserRuleContext parent, int invokingState) { super(parent, invokingState); }
		public RValueExpressionContext(ParserRuleContext parent, int invokingState, int _p) {
			super(parent, invokingState);
			this._p = _p;
		}
		@Override public int getRuleIndex() { return RULE_rValueExpression; }
	 
		public RValueExpressionContext() { }
		public void copyFrom(RValueExpressionContext ctx) {
			super.copyFrom(ctx);
			this._p = ctx._p;
		}
	}
	public static class ParenthezisedExpressionContext extends RValueExpressionContext {
		public RValueExpressionContext rValueExpression() {
			return getRuleContext(RValueExpressionContext.class,0);
		}
		public ParenthezisedExpressionContext(RValueExpressionContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MuteListener ) ((MuteListener)listener).enterParenthezisedExpression(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MuteListener ) ((MuteListener)listener).exitParenthezisedExpression(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof MuteVisitor ) return ((MuteVisitor<? extends T>)visitor).visitParenthezisedExpression(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class StringExpansionContext extends RValueExpressionContext {
		public RValueExpressionContext rValueExpression(int i) {
			return getRuleContext(RValueExpressionContext.class,i);
		}
		public TerminalNode STRING() { return getToken(MuteParser.STRING, 0); }
		public List<RValueExpressionContext> rValueExpression() {
			return getRuleContexts(RValueExpressionContext.class);
		}
		public StringExpansionContext(RValueExpressionContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MuteListener ) ((MuteListener)listener).enterStringExpansion(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MuteListener ) ((MuteListener)listener).exitStringExpansion(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof MuteVisitor ) return ((MuteVisitor<? extends T>)visitor).visitStringExpansion(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class NumericAtomContext extends RValueExpressionContext {
		public TerminalNode INT() { return getToken(MuteParser.INT, 0); }
		public NumericAtomContext(RValueExpressionContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MuteListener ) ((MuteListener)listener).enterNumericAtom(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MuteListener ) ((MuteListener)listener).exitNumericAtom(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof MuteVisitor ) return ((MuteVisitor<? extends T>)visitor).visitNumericAtom(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class RangeContext extends RValueExpressionContext {
		public RValueExpressionContext rValueExpression(int i) {
			return getRuleContext(RValueExpressionContext.class,i);
		}
		public List<RValueExpressionContext> rValueExpression() {
			return getRuleContexts(RValueExpressionContext.class);
		}
		public RangeContext(RValueExpressionContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MuteListener ) ((MuteListener)listener).enterRange(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MuteListener ) ((MuteListener)listener).exitRange(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof MuteVisitor ) return ((MuteVisitor<? extends T>)visitor).visitRange(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class LValueWrapperContext extends RValueExpressionContext {
		public TerminalNode MODULE() { return getToken(MuteParser.MODULE, 0); }
		public LValueExpressionContext lValueExpression() {
			return getRuleContext(LValueExpressionContext.class,0);
		}
		public LValueWrapperContext(RValueExpressionContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MuteListener ) ((MuteListener)listener).enterLValueWrapper(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MuteListener ) ((MuteListener)listener).exitLValueWrapper(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof MuteVisitor ) return ((MuteVisitor<? extends T>)visitor).visitLValueWrapper(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class UnaryExpressionContext extends RValueExpressionContext {
		public RValueExpressionContext rValueExpression() {
			return getRuleContext(RValueExpressionContext.class,0);
		}
		public UnaryExpressionContext(RValueExpressionContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MuteListener ) ((MuteListener)listener).enterUnaryExpression(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MuteListener ) ((MuteListener)listener).exitUnaryExpression(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof MuteVisitor ) return ((MuteVisitor<? extends T>)visitor).visitUnaryExpression(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class BinaryNumericExpressionContext extends RValueExpressionContext {
		public RValueExpressionContext rValueExpression(int i) {
			return getRuleContext(RValueExpressionContext.class,i);
		}
		public List<RValueExpressionContext> rValueExpression() {
			return getRuleContexts(RValueExpressionContext.class);
		}
